--- a/config_dual/data_vs/vs_t1s_weights.cfg
+++ b/config_dual/data_vs/vs_t1s_weights.cfg
@@ -4,12 +4,12 @@ tensor_type = float
 dsbn = True
 task_type = seg
 root_dir  = /
-1_train_csv = config_dual/data_vs/hrT2/train_source_like.csv
-1_valid_csv = config_dual/data_vs/cet1/valid.csv
-2_train_csv = config_dual/data_vs/hrT2/train_target_like.csv
-2_valid_csv = config_dual/data_vs/ceT1/valid.csv
+1_train_csv = config_dual/data_vs/train_ceT1_like.csv
+1_valid_csv = config_dual/data_vs/valid_ceT1.csv
+2_train_csv = config_dual/data_vs/train_hrT2_like.csv
+2_valid_csv = config_dual/data_vs/valid_hrT2.csv
 
-test_csv  = config_dual/data_vs/ceT1/train.csv
+test_csv  = config_dual/data_vs/train_hrT2.csv
 
 train_batch_size = 4
 
@@ -70,7 +70,7 @@ aes_para = None
 train_fpl_uda  = True
 dis = False
 dis_para = None
-val_t1 = True
+val_t1 = False
 val_t2 = True
 dual = False
 # list of gpus
@@ -89,26 +89,27 @@ weight_decay  = 1e-5
 lr_scheduler = MultiStepLR
 lr_gamma      = 0.5
 lr_milestones = [10000,20000,30000,40000]
-ckpt_save_dir    = ./model_dual/vs_t2s_fpl
+ckpt_save_dir    = ./model_dual/vs_t1s_g
 ckpt_save_prefix = dsbn
 
 # start iter
 iter_start = 0
-iter_max   = 20000
+iter_max   = 40000
 iter_valid = 500
-iter_save  = 50000
+iter_save  = 40000
 [testing]
 # list of gpus
-fpl = False
+fpl = True
+fpl_uncertainty_sorted = dataset/weight/vs_t2s.npy
+fpl_uncertainty_weight = dataset/weight/vs_t2s-weight.npy
 gpus       = [0]
 domian_label = 1
 ae = None
-#   1:t2 0:t1
 # checkpoint mode can be [0-latest, 1-best, 2-specified]
 ckpt_mode         = 1
 output_dir        = results_dual/
 evaluation_mode   = True
-test_time_dropout = False
+test_time_dropout = True
 # post_process = KeepLargestComponent
 # use test time augmentation
 tta_mode = 1
@@ -123,8 +124,8 @@ label_list = [1]
 organ_name = tumor
 
 
-ground_truth_folder_root = /your_dir/vs_data/T1_test/lab/
-segmentation_folder_root = result/unet_vst2s
-test_evaluation_image_pair    = config_dual/data_vs/t1_test_pair.csv
-valid_evaluation_image_pair    = config_dual/data_vs/t1_valid_pair.csv
+ground_truth_folder_root = ./dataset/ceT1_train/lab
+segmentation_folder_root = results_dual/vs_t1s_g
+test_evaluation_image_pair    = config_dual/data_vs/train_hrT2_pair.csv
+valid_evaluation_image_pair    = config_dual/data_vs/train_hrT2_pair.csv
 
